--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,30 +1,19 @@
-async function generateImage() {
-  const prompt = document.getElementById("prompt").value;
-  const imageEl = document.getElementById("image");
-  imageEl.src = ""; // נקה תוצאה קודמת
-
-  if (!prompt.trim()) {
-    alert("אנא הזן תיאור לתמונה.");
-    return;
-  }
-
-  try {
-    const response = await fetch("https://ai-alpha-azure.vercel.app/generate", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ prompt })
-    });
-
-    const data = await response.json();
-
-    if (data.image) {
-      imageEl.src = data.image;
-    } else {
-      alert("❌ לא התקבלה תמונה. נסה שוב.");
-      console.error("תשובת שרת:", data);
-    }
-  } catch (error) {
-    alert("🚫 שגיאה בעת יצירת התמונה.");
-    console.error("שגיאה:", error);
-  }
-}
+<!DOCTYPE html>
+<html lang="he">
+<head>
+  <meta charset="UTF-8">
+  <title>תמונה AI</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="container">
+    <h1>תמונה AI 🎨</h1>
+    <input type="text" id="prompt" placeholder="הכנס תיאור לתמונה...">
+    <button onclick="generateImage()">צור תמונה</button>
+    <div id="result">
+      <img id="image" src="" alt="">
+    </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
