--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="he">
 <head>
   <meta charset="UTF-8">
-  <title>תמונה AI</title>
+  <title>תמונה AI 🎨</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,6 +10,7 @@
     <h1>תמונה AI 🎨</h1>
     <input type="text" id="prompt" placeholder="הכנס תיאור לתמונה...">
     <button onclick="generateImage()">צור תמונה</button>
+    <div id="loading" style="display:none;">יוצר תמונה...</div>
     <div id="result">
       <img id="image" src="" alt="">
     </div>
